syntax = "proto3";

package infra.v1;

import "infra/v1/common.proto";

option go_package = "github.com/kashguard/go-mpc-vault/internal/infra/grpc/v1;infra";

// SigningService 签名服务
service SigningService {
  // 创建签名会话
  rpc CreateSigningSession(CreateSigningSessionRequest) returns (CreateSigningSessionResponse);
  
  // 阈值签名（2-of-3，仅服务器分片参与）
  rpc ThresholdSign(ThresholdSignRequest) returns (ThresholdSignResponse);
  
  // 获取签名会话
  rpc GetSigningSession(GetSigningSessionRequest) returns (GetSigningSessionResponse);
  
  // 批量签名
  rpc BatchSign(BatchSignRequest) returns (BatchSignResponse);
  
  // 验证签名
  rpc VerifySignature(VerifySignatureRequest) returns (VerifySignatureResponse);
}

// CreateSigningSessionRequest 创建签名会话请求
message CreateSigningSessionRequest {
  string key_id = 1;
  string protocol = 2;  // gg18, gg20, frost
}

// CreateSigningSessionResponse 创建签名会话响应
message CreateSigningSessionResponse {
  SigningSession session = 1;
}

// ThresholdSignRequest 阈值签名请求
message ThresholdSignRequest {
  string key_id = 1;
  bytes message = 2;
  string message_hex = 3;
  string chain_type = 4;
  // 团队签名的鉴权令牌（WebAuthn）
  repeated AuthToken auth_tokens = 11;
}

// ThresholdSignResponse 阈值签名响应
message ThresholdSignResponse {
  string signature = 1;
  string key_id = 2;
  string public_key = 3;
  string message = 4;
  string chain_type = 5;
  string session_id = 6;
  string signed_at = 7;
  repeated string participating_nodes = 8;
}

// GetSigningSessionRequest 获取签名会话请求
message GetSigningSessionRequest {
  string session_id = 1;
}

// GetSigningSessionResponse 获取签名会话响应
message GetSigningSessionResponse {
  SigningSession session = 1;
}

// BatchSignRequest 批量签名请求
message BatchSignRequest {
  repeated ThresholdSignRequest messages = 1;
}

// BatchSignResponse 批量签名响应
message BatchSignResponse {
  repeated ThresholdSignResponse signatures = 1;
  int32 total = 2;
  int32 success = 3;
  int32 failed = 4;
}

// VerifySignatureRequest 验证签名请求
message VerifySignatureRequest {
  string signature = 1;
  string public_key = 2;
  bytes message = 3;
  string message_hex = 4;
  string chain_type = 5;
}

// VerifySignatureResponse 验证签名响应
message VerifySignatureResponse {
  bool valid = 1;
  string public_key = 2;
  string address = 3;
  string verified_at = 4;
}

// SigningSession 签名会话
message SigningSession {
  string session_id = 1;
  string key_id = 2;
  string protocol = 3;
  string status = 4;
  int32 threshold = 5;
  int32 total_nodes = 6;
  repeated string participating_nodes = 7;
  int32 current_round = 8;
  int32 total_rounds = 9;
  string signature = 10;
  string created_at = 11;
  string completed_at = 12;
  int32 duration_ms = 13;
}

// AuthToken 鉴权令牌（WebAuthn）
message AuthToken {
  bytes passkey_signature = 1;   // WebAuthn Assertion Signature
  bytes authenticator_data = 2;  // WebAuthn AuthData
  bytes client_data_json = 3;    // WebAuthn ClientDataJSON
  string credential_id = 4;      // WebAuthn Credential ID
}
